--- a/desingOh/default.scss
+++ b/desingOh/default.scss
@@ -5,7 +5,6 @@
 }
 body {
 	margin: 0 auto;
-	max-width: 1500px;
 }
 
 .header {
@@ -49,7 +48,7 @@ body {
 		margin: 1.5rem 0;
 	}
 	.btn {
-		padding: 1rem;
+		padding: 1rem 2rem;
 		margin: 0.5rem 0 1rem 0;
 		font-size: 1rem;
 		font-weight: 500;
@@ -61,12 +60,14 @@ body {
 }
 
 .section_fonctionnement {
+	background-color: brown;
 	margin: 1rem auto;
 	max-width: 1500px;
 	padding: 1rem;
 
 	h2 {
 		flex-basis: 100%;
+		padding: 1rem;
 	}
 }
 .section_btn {
@@ -74,7 +75,7 @@ body {
 
 	.section_fonctionnement_btn {
 		background-color: rgb(196, 189, 189);
-		margin: 1rem 0.5rem;
+		margin: 1rem ;
 		padding: 1.5rem;
 		border-radius: 1.5rem;
 	}
@@ -111,11 +112,11 @@ body {
 }
 
 .section_restaurants {
+	background-color: rgb(161, 233, 18);
 	margin: 1rem auto;
 	max-width: 1500px;
 	padding: 1rem;
-	display: flex;
-	flex-direction: column;
+
 	h2 {
 		padding: 1rem;
 	}
@@ -127,30 +128,41 @@ body {
 	.section_restaurants_carte {
 		background-color: white;
 		width: 19rem;
-		height: 16rem;
+		height: 18rem;
 		border-radius: 1.5rem;
-		margin: 1rem 0;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
+		margin: 1rem;
+		flex-grow: 1;
+
 		img {
 			width: 100%;
 			height: 12rem;
 			object-fit: cover;
 			border-radius: 1.5rem 1.5rem 0 0;
 		}
-		.section_restaurants__carte_description {
-			padding-left: 1rem;
-		}
 	}
 }
-.footer {
-	width: 100%;
+
+.section_restaurants_carte_description{
+	display: flex;
+	justify-content: space-between;
+	padding: 1rem;
+}
+.fa-heart{
+	background-color: gray;
+	color:white;
+	
+}
+
+.fa-heart:hover{
+	color:violet;
+}
+
+footer {
 	background-color: rgb(19, 18, 18);
 	.footer {
-		margin: 1rem auto;
+		margin: 0 auto;
 		max-width: 1500px;
-		padding: 1rem;
+		padding: 2rem 1rem;
 		color: white;
 		display: flex;
 		justify-content: space-between;
@@ -168,9 +180,13 @@ body {
 		font-size: 1.5rem;
 		width: 100%;
 	}
+	.footerInfos{
+		flex-grow: 1;
+	}
 }
 @media screen and (max-width: 600px) {
-	.mentionsLegales {
-		width: 100%;
+
+	.footerInfos{
+		flex-basis: 100%;
 	}
 }
