--- a/desingOh/default.css
+++ b/desingOh/default.css
@@ -4,15 +4,10 @@
   text-decoration: none;
 }
 
-body {
-  margin: 0 auto;
-  font-family: "Roboto" serif;
-}
-
 :root {
-  --primaire: #9356DC;
-  --secondaire: #FF79DA;
-  --tertiaire: #99E2D0;
+  --primaire: #9356dc;
+  --secondaire: #ff79da;
+  --tertiaire: #99e2d0;
   --blanc: #ffffff;
   --noir: #000000;
   --gray: gray;
@@ -169,7 +164,7 @@ main {
 .section_restaurants .section_restaurants_carte {
   background-color: white;
   width: 19rem;
-  height: 18rem;
+  height: 16rem;
   border-radius: 1.5rem;
   margin: 1rem;
   -webkit-box-flex: 1;
@@ -195,13 +190,43 @@ main {
   padding: 1rem;
 }
 
-.fa-heart {
-  background-color: gray;
-  color: white;
+.nouveau {
+  background-color: var(--tertiaire);
+  width: 4.5rem;
+  padding: 0.3rem;
+  text-align: center;
+  position: absolute;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
 }
 
-.fa-heart:hover {
-  color: violet;
+.fa-heart-1 {
+  color: black;
+  z-index: -10;
+  margin-right: -1.2rem;
+}
+
+.heartHover {
+  background-color: white;
+  opacity: 0;
+}
+
+.heartHover:hover {
+  color: var(--primaire);
+  opacity: 1;
+}
+
+@media screen and (min-width: 1050px) {
+  .carte_4 {
+    -webkit-box-ordinal-group: 11;
+        -ms-flex-order: 10;
+            order: 10;
+  }
+  .carte_1, .carte_2, .carte_3 {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+  }
 }
 
 footer {
@@ -258,8 +283,6 @@ footer .footerInfos {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -270,30 +293,38 @@ footer .footerInfos {
 }
 
 .header_paletteDuGout img {
-  width: 50%;
+  width: 40%;
 }
 
-.header_paletteDuGout .fas {
-  font-size: 2rem;
+.header_paletteDuGout .fa-arrow-left {
   cursor: pointer;
+  width: 30%;
+  padding-right: 11rem;
+  font-size: 3vh;
 }
 
-.restaurant {
+.paletteDuGout_img {
+  width: 1500px;
+  max-width: 100%;
+  height: 20rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: relative;
+  z-index: -4;
+  margin: 0 auto;
+}
+
+.main {
   max-width: 1500px;
-  background-color: #e91818;
-}
-
-.restaurant .paletteDuGout_img {
-  width: 100%;
-  z-index: -10;
+  margin: 0 auto;
 }
 
 .restaurant .restaurantEntresPlats {
-  z-index: 3;
-  background-color: chartreuse;
-  margin-top: 2rem;
+  /*	background-color: chartreuse;*/
+  background-color: #f2f2f2;
+  margin-top: -4rem;
   padding: 1rem;
-  border-radius: 1.5rem 1.5rem 0 0;
+  border-radius: 2.5rem 2.5rem 0 0;
 }
 
 .restaurant .restaurantEntresPlats .nomDuRestaurant_titre {
@@ -303,18 +334,18 @@ footer .footerInfos {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  background-color: brown;
+  /*	background-color: brown;*/
 }
 
 .menu {
-  background-color: #bcc0bc;
-  margin: 1rem auto;
+  /*background-color: rgb(188, 192, 188);*/
+  margin: 0 auto;
   max-width: 1500px;
 }
 
 .menu .trait {
   width: 3rem;
-  border: 2px solid green;
+  border: 2px solid var(--tertiaire);
 }
 
 .menu .menuDescription {
@@ -336,20 +367,21 @@ footer .footerInfos {
 
 .commander {
   max-width: 1500px;
-  margin: 0 auto;
+  margin: 1rem auto;
   max-width: 1500px;
-  background-color: blueviolet;
+  /*	background-color: blueviolet;*/
   text-align: center;
 }
 
 .commander .btn_commander {
   padding: 0.5rem 1.5rem;
+  border: 1px solid gray;
   border-radius: 1.5rem;
-  background-color: violet;
+  background-color: var(--primaire);
 }
 
 @media screen and (min-width: 1050px) {
-  .menu {
+  main, .menu {
     margin: 0 auto;
     max-width: 1500px;
   }
@@ -364,6 +396,8 @@ footer .footerInfos {
 
 @media screen and (min-width: 650px) {
   .menu {
+    max-width: 1500px;
+    margin: 0 auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -382,7 +416,6 @@ footer .footerInfos {
     margin-left: 1rem;
   }
   .commander {
-    background-color: blueviolet;
     text-align: center;
     margin: 1rem 0;
   }
