--- a/desingOh/default.scss
+++ b/desingOh/default.scss
@@ -3,14 +3,11 @@
 	padding: 0;
 	text-decoration: none;
 }
-body {
-	margin: 0 auto;
-	font-family: "Roboto" serif;
-}
+
 :root {
-	--primaire: #9356DC;
-	--secondaire: #FF79DA;
-	--tertiaire: #99E2D0;
+	--primaire: #9356dc;
+	--secondaire: #ff79da;
+	--tertiaire: #99e2d0;
 	--blanc: #ffffff;
 	--noir: #000000;
 	--gray: gray;
@@ -25,8 +22,8 @@ body {
 		text-align: center;
 	}
 }
-main{
-		margin: 0 auto;
+main {
+	margin: 0 auto;
 	max-width: 1500px;
 }
 .section_location {
@@ -35,7 +32,7 @@ main{
 	padding: 1rem;
 	background-color: rgb(230, 230, 230);
 	text-align: center;
-	box-shadow:0px -2px 1px 1px rgba(0,0,0,0.77);
+	box-shadow: 0px -2px 1px 1px rgba(0, 0, 0, 0.77);
 	h4 {
 		font-size: 1.5rem;
 	}
@@ -45,7 +42,7 @@ main{
 }
 
 .section_presentation {
-background-color: var(--blanc);
+	background-color: var(--blanc);
 	margin: 0 auto;
 	max-width: 1500px;
 	padding: 2rem 1rem;
@@ -87,13 +84,13 @@ background-color: var(--blanc);
 	background-color: yellow;
 
 	.section_fonctionnement_btn {
-			background-color: rgb(230, 230, 230);
+		background-color: rgb(230, 230, 230);
 		margin: 1rem;
 		padding: 1.5rem;
 		border-radius: 1.5rem;
 	}
 	.section_fonctionnement_btn_etapes {
-	background-color: var(--primaire);
+		background-color: var(--primaire);
 		color: white;
 		border-radius: 50%;
 		padding: 0.6rem;
@@ -105,7 +102,7 @@ background-color: var(--blanc);
 	}
 
 	.fa-store {
-		color:var(--primaire);
+		color: var(--primaire);
 	}
 
 	.section_fonctionnement_btn_action {
@@ -140,7 +137,7 @@ background-color: var(--blanc);
 	.section_restaurants_carte {
 		background-color: white;
 		width: 19rem;
-		height: 18rem;
+		height: 16rem;
 		border-radius: 1.5rem;
 		margin: 1rem;
 		flex-grow: 1;
@@ -159,13 +156,38 @@ background-color: var(--blanc);
 	justify-content: space-between;
 	padding: 1rem;
 }
-.fa-heart {
-	background-color: gray;
-	color: white;
+.nouveau {
+	background-color: var(--tertiaire);
+	width: 4.5rem;
+	padding: 0.3rem;
+	text-align: center;
+	position: absolute;
+	align-self: flex-end;
 }
 
-.fa-heart:hover {
-	color: violet;
+.fa-heart-1 {
+	color: black;
+	z-index: -10;
+	margin-right: -1.2rem;
+}
+.heartHover {
+	background-color: white;
+	opacity: 0;
+}
+
+.heartHover:hover {
+	color: var(--primaire);
+	opacity: 1;
+}
+@media screen and (min-width: 1050px) {
+	.carte_4 {
+		order: 10;
+	}
+	.carte_1,
+	.carte_2,
+	.carte_3 {
+		order: -1;
+	}
 }
 
 footer {
@@ -202,120 +224,125 @@ footer {
 }
 
 /*la palette du gout*/
-.header_paletteDuGout{
+.header_paletteDuGout {
 	display: flex;
-	justify-content: space-around;
 	align-items: center;
-		margin: 0 auto;
-		width: 100%;
+	margin: 0 auto;
+	width: 100%;
 	max-width: 1500px;
 	padding: 1.5rem 0 0.5rem 0;
-	img{
-	width: 50%;
+	img {
+		width: 40%;
 	}
-	.fas{
-		font-size: 2rem;
+	.fa-arrow-left {
 		cursor: pointer;
+		width: 30%;
+		padding-right: 11rem;
+		font-size: 3vh;
 	}
 }
-.restaurant {
-	max-width: 1500px;
-	background-color: rgb(233, 24, 24);
 
-	.paletteDuGout_img {
-		width: 100%;
-		z-index: -10;
-	}
+.paletteDuGout_img {
+	width: 1500px;
+	max-width: 100%;
+	height: 20rem;
+	object-fit: cover;
+	position: relative;
+	z-index: -4;
+	margin: 0 auto;
+}
+.main {
+	max-width: 1500px;
+	margin: 0 auto;
+}
+.restaurant {
 	.restaurantEntresPlats {
-		z-index: 3;
-		background-color: chartreuse;
-		margin-top: 2rem;
+		/*	background-color: chartreuse;*/
+		background-color: rgb(242, 242, 242);
+		margin-top: -4rem;
 		padding: 1rem;
-		border-radius: 1.5rem 1.5rem 0 0;
+		border-radius: 2.5rem 2.5rem 0 0;
 		.nomDuRestaurant_titre {
 			display: flex;
 			justify-content: space-between;
-			background-color: brown;
+			/*	background-color: brown;*/
 		}
 	}
 }
-.menu{
-	background-color: rgb(188, 192, 188);
-	margin:1rem auto;
+.menu {
+	/*background-color: rgb(188, 192, 188);*/
+	margin: 0 auto;
 	max-width: 1500px;
 
-	.trait{
+	.trait {
 		width: 3rem;
-	border:2px solid green;
-
+		border: 2px solid var(--tertiaire);
 	}
-	.menuDescription{
-	background-color: white;
-	padding: 1rem ;
-	margin:1rem 0;
-	border-radius: 1rem;
+	.menuDescription {
+		background-color: white;
+		padding: 1rem;
+		margin: 1rem 0;
+		border-radius: 1rem;
 
-	.menuDescriptionPrix{
-		display: flex;
-		justify-content: space-between;
-		padding: 0.3rem 0 0 0;
-
-	}
+		.menuDescriptionPrix {
+			display: flex;
+			justify-content: space-between;
+			padding: 0.3rem 0 0 0;
+		}
 	}
 }
-.commander{
+.commander {
 	max-width: 1500px;
-   margin: 0 auto;
+	margin: 1rem auto;
 	max-width: 1500px;
-	background-color: blueviolet;
-		text-align: center;
-		.btn_commander{
-	padding: 0.5rem 1.5rem;
-	border-radius:1.5rem;
-	background-color: violet;
-}
-
+	/*	background-color: blueviolet;*/
+	text-align: center;
+	.btn_commander {
+		padding: 0.5rem 1.5rem;
+		border: 1px solid gray;
+		border-radius: 1.5rem;
+		background-color: var(--primaire);
+	}
 }
 
 @media screen and (min-width: 1050px) {
-.menu{
+	main,
+	.menu {
 		margin: 0 auto;
-	max-width: 1500px;
-}
-.carteMenuEntree{
-			flex-basis: 30%;
-		}
-.carteMenuPlats{
-	margin: 0 1rem 0 2rem;
-}
-
+		max-width: 1500px;
+	}
+	.carteMenuEntree {
+		flex-basis: 30%;
+	}
+	.carteMenuPlats {
+		margin: 0 1rem 0 2rem;
+	}
 }
 @media screen and (min-width: 650px) {
-.menu{
+	.menu {
+		max-width: 1500px;
+		margin: 0 auto;
 		display: flex;
 		flex-wrap: wrap;
-		.carteMenuEntree{
+		.carteMenuEntree {
 			width: 100%;
 		}
-	
-article{
+
+		article {
 			flex-grow: 1;
-	
 		}
-		.carteMenuDesserts{
-	margin-left: 1rem;
-}
+		.carteMenuDesserts {
+			margin-left: 1rem;
+		}
 	}
 
-	.commander{
-	background-color: blueviolet;
+	.commander {
 		text-align: center;
 		margin: 1rem 0;
-		.btn_commander{
-	padding: 0.5rem 2.5rem;
-	border-radius:0.5rem;
-	font-size: 1.4rem ;
-}
-
-}
+		.btn_commander {
+			padding: 0.5rem 2.5rem;
+			border-radius: 0.5rem;
+			font-size: 1.4rem;
+		}
+	}
 }
