--- a/desingOh/default.css
+++ b/desingOh/default.css
@@ -13,6 +13,17 @@
   --gray: gray;
 }
 
+h3 {
+  font-family: 'Roboto';
+  font-weight: 100;
+  padding-bottom: 0.2rem;
+}
+
+h4 {
+  font-family: 'Roboto';
+  font-weight: 400;
+}
+
 .header {
   margin: 0 auto;
   max-width: 1500px;
@@ -61,6 +72,7 @@ main {
 }
 
 .section_presentation h4 {
+  font-family: 'Roboto';
   font-size: 1.4rem;
   font-weight: 100;
   margin: 1.5rem 0;
@@ -222,7 +234,9 @@ main {
         -ms-flex-order: 10;
             order: 10;
   }
-  .carte_1, .carte_2, .carte_3 {
+  .carte_1,
+  .carte_2,
+  .carte_3 {
     -webkit-box-ordinal-group: 0;
         -ms-flex-order: -1;
             order: -1;
@@ -299,7 +313,8 @@ footer .footerInfos {
 .header_paletteDuGout .fa-arrow-left {
   cursor: pointer;
   width: 30%;
-  padding-right: 11rem;
+  padding-right: 6rem;
+  padding-left: 2rem;
   font-size: 3vh;
 }
 
@@ -314,13 +329,11 @@ footer .footerInfos {
   margin: 0 auto;
 }
 
-.main {
-  max-width: 1500px;
-  margin: 0 auto;
+.restaurant {
+  padding: 0 .031rem;
 }
 
 .restaurant .restaurantEntresPlats {
-  /*	background-color: chartreuse;*/
   background-color: #f2f2f2;
   margin-top: -4rem;
   padding: 1rem;
@@ -331,16 +344,38 @@ footer .footerInfos {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  /*	background-color: brown;*/
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1rem;
+  max-width: 900px;
+  margin: 0 auto;
+  /*	i{
+					font-size: 1.5rem;
+				}*/
+}
+
+.restaurant .restaurantEntresPlats .nomDuRestaurant_titre h2 {
+  font-family: 'Shrikhand';
+  font-size: 1.5rem;
+  font-weight: normal;
 }
 
 .menu {
-  /*background-color: rgb(188, 192, 188);*/
   margin: 0 auto;
   max-width: 1500px;
+}
+
+.menu h4 {
+  font-family: 'Roboto';
+  font-weight: 700;
+}
+
+.menu P {
+  font-family: 'Roboto';
+  font-weight: 400;
 }
 
 .menu .trait {
@@ -375,23 +410,10 @@ footer .footerInfos {
 
 .commander .btn_commander {
   padding: 0.5rem 1.5rem;
-  border: 1px solid gray;
+  border: 1px solid;
   border-radius: 1.5rem;
-  background-color: var(--primaire);
-}
-
-@media screen and (min-width: 1050px) {
-  main, .menu {
-    margin: 0 auto;
-    max-width: 1500px;
-  }
-  .carteMenuEntree {
-    -ms-flex-preferred-size: 30%;
-        flex-basis: 30%;
-  }
-  .carteMenuPlats {
-    margin: 0 1rem 0 2rem;
-  }
+  color: white;
+  background-color: var(--secondaire);
 }
 
 @media screen and (min-width: 650px) {
