--- a/desingOh/default.scss
+++ b/desingOh/default.scss
@@ -12,6 +12,15 @@
 	--noir: #000000;
 	--gray: gray;
 }
+h3{
+	font-family: 'Roboto';
+	font-weight: 100;
+	padding-bottom: 0.2rem;
+}
+h4{
+font-family: 'Roboto';
+font-weight: 400;
+}
 
 .header {
 	margin: 0 auto;
@@ -53,6 +62,10 @@ main {
 		font-weight: bold;
 	}
 	h4 {
+			
+font-family: 'Roboto';
+
+
 		font-size: 1.4rem;
 		font-weight: 100;
 		margin: 1.5rem 0;
@@ -129,6 +142,7 @@ main {
 	h2 {
 		padding: 1rem;
 	}
+
 	.section_restaurant_cartes {
 		display: flex;
 		justify-content: space-between;
@@ -237,7 +251,8 @@ footer {
 	.fa-arrow-left {
 		cursor: pointer;
 		width: 30%;
-		padding-right: 11rem;
+		padding-right: 6rem;
+		padding-left: 2rem;
 		font-size: 3vh;
 	}
 }
@@ -251,28 +266,43 @@ footer {
 	z-index: -4;
 	margin: 0 auto;
 }
-.main {
-	max-width: 1500px;
-	margin: 0 auto;
-}
+
 .restaurant {
+	padding: 0 .031rem;
 	.restaurantEntresPlats {
-		/*	background-color: chartreuse;*/
 		background-color: rgb(242, 242, 242);
 		margin-top: -4rem;
 		padding: 1rem;
 		border-radius: 2.5rem 2.5rem 0 0;
 		.nomDuRestaurant_titre {
-			display: flex;
-			justify-content: space-between;
-			/*	background-color: brown;*/
+				display: flex;
+				justify-content: space-around;
+				align-items: center;
+				padding: 1rem;
+				max-width: 900px;
+				margin: 0 auto;
+			h2{
+					font-family: 'Shrikhand' ;
+					font-size: 1.5rem;
+					font-weight:normal;
+				}
+			/*	i{
+					font-size: 1.5rem;
+				}*/
 		}
 	}
 }
 .menu {
-	/*background-color: rgb(188, 192, 188);*/
 	margin: 0 auto;
 	max-width: 1500px;
+			h4{
+font-family: 'Roboto';
+font-weight: 700;
+}
+P{
+	font-family: 'Roboto';
+font-weight: 400;
+}
 
 	.trait {
 		width: 3rem;
@@ -299,26 +329,16 @@ footer {
 	text-align: center;
 	.btn_commander {
 		padding: 0.5rem 1.5rem;
-		border: 1px solid gray;
+		border: 1px solid;
 		border-radius: 1.5rem;
-		background-color: var(--primaire);
+		color: white;
+		background-color: var(--secondaire);
 	}
 }
 
-@media screen and (min-width: 1050px) {
-	main,
-	.menu {
-		margin: 0 auto;
-		max-width: 1500px;
-	}
-	.carteMenuEntree {
-		flex-basis: 30%;
-	}
-	.carteMenuPlats {
-		margin: 0 1rem 0 2rem;
-	}
-}
+
 @media screen and (min-width: 650px) {
+
 	.menu {
 		max-width: 1500px;
 		margin: 0 auto;
@@ -334,6 +354,7 @@ footer {
 		.carteMenuDesserts {
 			margin-left: 1rem;
 		}
+
 	}
 
 	.commander {
@@ -345,4 +366,5 @@ footer {
 			font-size: 1.4rem;
 		}
 	}
+
 }
