--- a/desingOh/default.css
+++ b/desingOh/default.css
@@ -10,7 +10,7 @@
   --tertiaire: #99e2d0;
   --blanc: #ffffff;
   --noir: #000000;
-  --gray: gray;
+  --background: rgb(245, 240, 240);
 }
 
 h3 {
@@ -25,10 +25,10 @@ h4 {
 }
 
 .header {
+  background-color: var(--background);
   margin: 0 auto;
   max-width: 1500px;
   padding: 1.5rem 0 0.5rem 0;
-  background-color: var(--blanc);
 }
 
 .header h1 {
@@ -46,8 +46,8 @@ main {
   padding: 1rem;
   background-color: #e6e6e6;
   text-align: center;
-  -webkit-box-shadow: 0px -2px 1px 1px rgba(0, 0, 0, 0.77);
-          box-shadow: 0px -2px 1px 1px rgba(0, 0, 0, 0.77);
+  -webkit-box-shadow: 0px -2px 1px 1px rgba(148, 143, 143, 0.77);
+          box-shadow: 0px -2px 1px 1px rgba(148, 143, 143, 0.77);
 }
 
 .section_location h4 {
@@ -59,7 +59,7 @@ main {
 }
 
 .section_presentation {
-  background-color: var(--blanc);
+  background-color: var(--background);
   margin: 0 auto;
   max-width: 1500px;
   padding: 2rem 1rem;
@@ -81,17 +81,18 @@ main {
 .section_presentation .btn {
   padding: 1rem 2rem;
   margin: 0.5rem 0 1rem 0;
+  font-family: 'Roboto';
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: normal;
   border-radius: 2rem;
   border: none;
-  background-color: var(--primaire);
+  background-color: var(--secondaire);
   color: white;
 }
 
 .section_fonctionnement {
-  background-color: brown;
-  margin: 1rem auto;
+  /*	background-color: brown;*/
+  margin: 0 auto;
   max-width: 1500px;
   padding: 1rem;
 }
@@ -100,14 +101,18 @@ main {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
   padding: 1rem;
+  font-family: 'Roboto';
+  font-weight: bold;
 }
 
 .section_btn {
-  background-color: yellow;
+  /*	background-color: yellow;*/
+  font-family: 'Roboto';
+  font-weight: normal;
 }
 
 .section_btn .section_fonctionnement_btn {
-  background-color: #e6e6e6;
+  background-color: var(--background);
   margin: 1rem;
   padding: 1.5rem;
   border-radius: 1.5rem;
@@ -117,7 +122,7 @@ main {
   background-color: var(--primaire);
   color: white;
   border-radius: 50%;
-  padding: 0.6rem;
+  padding: .4rem 0.6rem;
   margin-left: -2rem;
 }
 
@@ -152,10 +157,23 @@ main {
 }
 
 .section_restaurants {
-  background-color: #a1e912;
+  /*	background-color: rgb(161, 233, 18);*/
+  background-color: var(--background);
   margin: 1rem auto;
   max-width: 1500px;
   padding: 1rem;
+  font-family: 'Roboto';
+}
+
+.section_restaurants .carte_description_1 {
+  font-family: 'Roboto';
+  color: black;
+  padding-bottom: 1rem;
+}
+
+.section_restaurants .carte_description_1 h4 {
+  font-weight: bold;
+  font-size: 1.2rem;
 }
 
 .section_restaurants h2 {
@@ -182,6 +200,7 @@ main {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+  position: relative;
 }
 
 .section_restaurants .section_restaurants_carte img {
@@ -192,6 +211,23 @@ main {
   border-radius: 1.5rem 1.5rem 0 0;
 }
 
+.section_restaurants .section_restaurants_carte .nouveau {
+  background-color: var(--tertiaire);
+  color: #1aa94e;
+  font-size: 1rem;
+  font-weight: 500;
+  font-family: 'Roboto';
+  width: 4.5rem;
+  padding: 0.3rem;
+  text-align: center;
+  position: absolute;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  z-index: 100;
+  bottom: 80%;
+  left: 75%;
+}
+
 .section_restaurants_carte_description {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -200,16 +236,6 @@ main {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 1rem;
-}
-
-.nouveau {
-  background-color: var(--tertiaire);
-  width: 4.5rem;
-  padding: 0.3rem;
-  text-align: center;
-  position: absolute;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
 }
 
 .fa-heart-1 {
@@ -248,6 +274,7 @@ footer {
 }
 
 footer .footer {
+  font-family: 'Roboto';
   margin: 0 auto;
   max-width: 1500px;
   padding: 2rem 1rem;
@@ -270,10 +297,12 @@ footer .fas {
 }
 
 footer .mentionsLegales {
-  padding: 1rem 1rem 1rem 0;
+  padding: .5rem 1rem .5rem 0;
 }
 
 footer .footer_header {
+  font-family: 'Shrikhand';
+  font-weight: normal;
   margin: 0 1rem 1rem 0;
   font-size: 1.5rem;
   width: 100%;
@@ -283,6 +312,10 @@ footer .footerInfos {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+}
+
+footer a {
+  color: white;
 }
 
 @media screen and (max-width: 600px) {
@@ -352,9 +385,6 @@ footer .footerInfos {
   padding: 1rem;
   max-width: 900px;
   margin: 0 auto;
-  /*	i{
-					font-size: 1.5rem;
-				}*/
 }
 
 .restaurant .restaurantEntresPlats .nomDuRestaurant_titre h2 {
