--- a/desingOh/default.scss
+++ b/desingOh/default.scss
@@ -10,7 +10,7 @@
 	--tertiaire: #99e2d0;
 	--blanc: #ffffff;
 	--noir: #000000;
-	--gray: gray;
+	--background: rgb(245, 240, 240);
 }
 h3{
 	font-family: 'Roboto';
@@ -23,10 +23,11 @@ font-weight: 400;
 }
 
 .header {
+		background-color:var(--background);
 	margin: 0 auto;
 	max-width: 1500px;
 	padding: 1.5rem 0 0.5rem 0;
-	background-color: var(--blanc);
+
 	h1 {
 		text-align: center;
 	}
@@ -41,7 +42,7 @@ main {
 	padding: 1rem;
 	background-color: rgb(230, 230, 230);
 	text-align: center;
-	box-shadow: 0px -2px 1px 1px rgba(0, 0, 0, 0.77);
+	box-shadow: 0px -2px 1px 1px rgba(148, 143, 143, 0.77);
 	h4 {
 		font-size: 1.5rem;
 	}
@@ -51,7 +52,7 @@ main {
 }
 
 .section_presentation {
-	background-color: var(--blanc);
+	background-color: var(--background);
 	margin: 0 auto;
 	max-width: 1500px;
 	padding: 2rem 1rem;
@@ -61,11 +62,8 @@ main {
 		font-size: 2rem;
 		font-weight: bold;
 	}
-	h4 {
-			
+	h4 {		
 font-family: 'Roboto';
-
-
 		font-size: 1.4rem;
 		font-weight: 100;
 		margin: 1.5rem 0;
@@ -73,31 +71,35 @@ font-family: 'Roboto';
 	.btn {
 		padding: 1rem 2rem;
 		margin: 0.5rem 0 1rem 0;
+		font-family: 'Roboto';
 		font-size: 1rem;
-		font-weight: 500;
+		font-weight: normal;
 		border-radius: 2rem;
 		border: none;
-		background-color: var(--primaire);
+		background-color: var(--secondaire);
 		color: white;
 	}
 }
 
 .section_fonctionnement {
-	background-color: brown;
-	margin: 1rem auto;
+/*	background-color: brown;*/
+	margin: 0 auto;
 	max-width: 1500px;
 	padding: 1rem;
-
 	h2 {
 		flex-basis: 100%;
 		padding: 1rem;
+		font-family: 'Roboto';
+		font-weight: bold;
 	}
 }
 .section_btn {
-	background-color: yellow;
+/*	background-color: yellow;*/
+		font-family: 'Roboto';
+		font-weight: normal;
 
 	.section_fonctionnement_btn {
-		background-color: rgb(230, 230, 230);
+		background-color: var(--background);
 		margin: 1rem;
 		padding: 1.5rem;
 		border-radius: 1.5rem;
@@ -106,7 +108,7 @@ font-family: 'Roboto';
 		background-color: var(--primaire);
 		color: white;
 		border-radius: 50%;
-		padding: 0.6rem;
+		padding:.4rem 0.6rem;
 		margin-left: -2rem;
 	}
 	.fas {
@@ -134,10 +136,22 @@ font-family: 'Roboto';
 }
 
 .section_restaurants {
-	background-color: rgb(161, 233, 18);
+/*	background-color: rgb(161, 233, 18);*/
+	background-color: var(--background);
 	margin: 1rem auto;
 	max-width: 1500px;
 	padding: 1rem;
+	font-family: 'Roboto';
+	
+	.carte_description_1{
+		font-family: 'Roboto';
+		color:black;
+		padding-bottom: 1rem;
+		h4{
+			font-weight: bold;
+			font-size: 1.2rem;
+		}
+	}
 
 	h2 {
 		padding: 1rem;
@@ -155,6 +169,7 @@ font-family: 'Roboto';
 		border-radius: 1.5rem;
 		margin: 1rem;
 		flex-grow: 1;
+		position: relative;
 
 		img {
 			width: 100%;
@@ -162,6 +177,23 @@ font-family: 'Roboto';
 			object-fit: cover;
 			border-radius: 1.5rem 1.5rem 0 0;
 		}
+		
+	.nouveau {
+	background-color: var(--tertiaire);
+	color: rgb(26, 169, 78);
+	font-size: 1rem;
+	font-weight:500;
+	font-family: 'Roboto';
+	width: 4.5rem;
+	padding: 0.3rem;
+	text-align: center;
+	position: absolute;
+	align-self: flex-end;
+	z-index: 100;
+	bottom: 80%;
+	left: 75%;
+}
+
 	}
 }
 
@@ -170,14 +202,8 @@ font-family: 'Roboto';
 	justify-content: space-between;
 	padding: 1rem;
 }
-.nouveau {
-	background-color: var(--tertiaire);
-	width: 4.5rem;
-	padding: 0.3rem;
-	text-align: center;
-	position: absolute;
-	align-self: flex-end;
-}
+
+
 
 .fa-heart-1 {
 	color: black;
@@ -207,6 +233,7 @@ font-family: 'Roboto';
 footer {
 	background-color: rgb(19, 18, 18);
 	.footer {
+		font-family: 'Roboto';
 		margin: 0 auto;
 		max-width: 1500px;
 		padding: 2rem 1rem;
@@ -220,9 +247,11 @@ footer {
 		padding: 1rem 1rem 1rem 0;
 	}
 	.mentionsLegales {
-		padding: 1rem 1rem 1rem 0;
+		padding: .5rem 1rem .5rem 0;
 	}
 	.footer_header {
+		font-family: 'Shrikhand';
+		font-weight: normal;
 		margin: 0 1rem 1rem 0;
 		font-size: 1.5rem;
 		width: 100%;
@@ -230,6 +259,7 @@ footer {
 	.footerInfos {
 		flex-grow: 1;
 	}
+	a{color:white;}
 }
 @media screen and (max-width: 600px) {
 	.footerInfos {
@@ -286,9 +316,6 @@ footer {
 					font-size: 1.5rem;
 					font-weight:normal;
 				}
-			/*	i{
-					font-size: 1.5rem;
-				}*/
 		}
 	}
 }
