--- a/desingOh/default.css
+++ b/desingOh/default.css
@@ -10,18 +10,19 @@
   --tertiaire: #99e2d0;
   --blanc: #ffffff;
   --noir: #000000;
-  --background: rgb(245, 240, 240);
+  --background: rgb(250, 247, 247);
 }
 
 h3 {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: 100;
   padding-bottom: 0.2rem;
 }
 
+h2,
 h4 {
-  font-family: 'Roboto';
-  font-weight: 400;
+  font-family: "Roboto";
+  font-weight: normal;
 }
 
 .header {
@@ -32,6 +33,11 @@ h4 {
 }
 
 .header h1 {
+  text-align: center;
+}
+
+.header h1 .logo {
+  width: 25vh;
   text-align: center;
 }
 
@@ -67,13 +73,13 @@ main {
 }
 
 .section_presentation h2 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: bold;
 }
 
 .section_presentation h4 {
-  font-family: 'Roboto';
-  font-size: 1.4rem;
+  font-family: "Roboto";
+  font-size: 1.3rem;
   font-weight: 100;
   margin: 1.5rem 0;
 }
@@ -81,7 +87,7 @@ main {
 .section_presentation .btn {
   padding: 1rem 2rem;
   margin: 0.5rem 0 1rem 0;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-size: 1rem;
   font-weight: normal;
   border-radius: 2rem;
@@ -101,34 +107,38 @@ main {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
   padding: 1rem;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: bold;
 }
 
 .section_btn {
   /*	background-color: yellow;*/
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: normal;
 }
 
 .section_btn .section_fonctionnement_btn {
-  background-color: var(--background);
+  background-color: #faf7f7;
   margin: 1rem;
   padding: 1.5rem;
   border-radius: 1.5rem;
+}
+
+.section_btn .btn_action_3 {
+  background-color: #f7e4f7;
 }
 
 .section_btn .section_fonctionnement_btn_etapes {
   background-color: var(--primaire);
   color: white;
   border-radius: 50%;
-  padding: .4rem 0.6rem;
+  padding: 0.4rem 0.6rem;
   margin-left: -2rem;
 }
 
 .section_btn .fas {
   margin: 0 1rem;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
 }
 
 .section_btn .fa-store {
@@ -140,8 +150,11 @@ main {
   font-weight: bold;
 }
 
-@media screen and (min-width: 750px) {
-  .section_btn {
+@media screen and (min-width: 800px) {
+  .section_fonctionnement {
+    background-color: var(--background);
+  }
+  .section_fonctionnement .section_btn {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -149,24 +162,25 @@ main {
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
-  .section_fonctionnement_btn {
+  .section_fonctionnement .section_btn .section_fonctionnement_btn {
     -webkit-box-flex: 1;
         -ms-flex-positive: 1;
             flex-grow: 1;
+    background-color: #f7e4f7;
   }
 }
 
 .section_restaurants {
   /*	background-color: rgb(161, 233, 18);*/
   background-color: var(--background);
-  margin: 1rem auto;
+  margin: 0 auto;
   max-width: 1500px;
   padding: 1rem;
-  font-family: 'Roboto';
+  font-family: "Roboto";
 }
 
 .section_restaurants .carte_description_1 {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   color: black;
   padding-bottom: 1rem;
 }
@@ -177,6 +191,9 @@ main {
 }
 
 .section_restaurants h2 {
+  font-family: "Roboto";
+  font-weight: 550;
+  font-size: 1.5rem;
   padding: 1rem;
 }
 
@@ -194,7 +211,7 @@ main {
 .section_restaurants .section_restaurants_carte {
   background-color: white;
   width: 19rem;
-  height: 16rem;
+  height: 17rem;
   border-radius: 1.5rem;
   margin: 1rem;
   -webkit-box-flex: 1;
@@ -216,7 +233,7 @@ main {
   color: #1aa94e;
   font-size: 1rem;
   font-weight: 500;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   width: 4.5rem;
   padding: 0.3rem;
   text-align: center;
@@ -224,8 +241,8 @@ main {
   -ms-flex-item-align: end;
       align-self: flex-end;
   z-index: 100;
-  bottom: 80%;
-  left: 75%;
+  bottom: 83%;
+  left: 68%;
 }
 
 .section_restaurants_carte_description {
@@ -238,10 +255,14 @@ main {
   padding: 1rem;
 }
 
+.fa-heart {
+  font-size: 1.35rem;
+}
+
 .fa-heart-1 {
   color: black;
   z-index: -10;
-  margin-right: -1.2rem;
+  margin-right: -1.6rem;
 }
 
 .heartHover {
@@ -270,11 +291,11 @@ main {
 }
 
 footer {
-  background-color: #131212;
+  background-color: #303030;
 }
 
 footer .footer {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   margin: 0 auto;
   max-width: 1500px;
   padding: 2rem 1rem;
@@ -293,15 +314,15 @@ footer .footer {
 }
 
 footer .fas {
-  padding: 1rem 1rem 1rem 0;
+  padding: 0.5rem 1rem 0.5rem 0;
 }
 
 footer .mentionsLegales {
-  padding: .5rem 1rem .5rem 0;
+  padding: 0.5rem 0.5rem 0.5rem 0;
 }
 
 footer .footer_header {
-  font-family: 'Shrikhand';
+  font-family: "Shrikhand";
   font-weight: normal;
   margin: 0 1rem 1rem 0;
   font-size: 1.5rem;
@@ -363,7 +384,7 @@ footer a {
 }
 
 .restaurant {
-  padding: 0 .031rem;
+  padding: 0 0.031rem;
 }
 
 .restaurant .restaurantEntresPlats {
@@ -388,7 +409,7 @@ footer a {
 }
 
 .restaurant .restaurantEntresPlats .nomDuRestaurant_titre h2 {
-  font-family: 'Shrikhand';
+  font-family: "Shrikhand";
   font-size: 1.5rem;
   font-weight: normal;
 }
@@ -399,12 +420,12 @@ footer a {
 }
 
 .menu h4 {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: 700;
 }
 
 .menu P {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: 400;
 }
 
