--- a/desingOh/default.scss
+++ b/desingOh/default.scss
@@ -10,26 +10,30 @@
 	--tertiaire: #99e2d0;
 	--blanc: #ffffff;
 	--noir: #000000;
-	--background: rgb(245, 240, 240);
+	--background: rgb(250, 247, 247);
 }
-h3{
-	font-family: 'Roboto';
+h3 {
+	font-family: "Roboto";
 	font-weight: 100;
 	padding-bottom: 0.2rem;
 }
-h4{
-font-family: 'Roboto';
-font-weight: 400;
+h2,
+h4 {
+	font-family: "Roboto";
+	font-weight: normal;
 }
 
 .header {
-		background-color:var(--background);
+	background-color: var(--background);
 	margin: 0 auto;
 	max-width: 1500px;
 	padding: 1.5rem 0 0.5rem 0;
-
 	h1 {
 		text-align: center;
+		.logo {
+			width: 25vh;
+			text-align: center;
+		}
 	}
 }
 main {
@@ -59,19 +63,19 @@ main {
 	text-align: center;
 
 	h2 {
-		font-size: 2rem;
+		font-size: 1.5rem;
 		font-weight: bold;
 	}
-	h4 {		
-font-family: 'Roboto';
-		font-size: 1.4rem;
+	h4 {
+		font-family: "Roboto";
+		font-size: 1.3rem;
 		font-weight: 100;
 		margin: 1.5rem 0;
 	}
 	.btn {
 		padding: 1rem 2rem;
 		margin: 0.5rem 0 1rem 0;
-		font-family: 'Roboto';
+		font-family: "Roboto";
 		font-size: 1rem;
 		font-weight: normal;
 		border-radius: 2rem;
@@ -82,38 +86,41 @@ font-family: 'Roboto';
 }
 
 .section_fonctionnement {
-/*	background-color: brown;*/
+	/*	background-color: brown;*/
 	margin: 0 auto;
 	max-width: 1500px;
 	padding: 1rem;
 	h2 {
 		flex-basis: 100%;
 		padding: 1rem;
-		font-family: 'Roboto';
+		font-family: "Roboto";
 		font-weight: bold;
 	}
 }
 .section_btn {
-/*	background-color: yellow;*/
-		font-family: 'Roboto';
-		font-weight: normal;
+	/*	background-color: yellow;*/
+	font-family: "Roboto";
+	font-weight: normal;
 
 	.section_fonctionnement_btn {
-		background-color: var(--background);
+		background-color: rgb(250, 247, 247);
 		margin: 1rem;
 		padding: 1.5rem;
 		border-radius: 1.5rem;
+	}
+	.btn_action_3 {
+		background-color: rgb(247, 228, 247);
 	}
 	.section_fonctionnement_btn_etapes {
 		background-color: var(--primaire);
 		color: white;
 		border-radius: 50%;
-		padding:.4rem 0.6rem;
+		padding: 0.4rem 0.6rem;
 		margin-left: -2rem;
 	}
 	.fas {
 		margin: 0 1rem;
-		font-size: 1.3rem;
+		font-size: 1.5rem;
 	}
 
 	.fa-store {
@@ -125,35 +132,41 @@ font-family: 'Roboto';
 		font-weight: bold;
 	}
 }
-@media screen and (min-width: 750px) {
-	.section_btn {
-		display: flex;
-		justify-content: space-between;
-	}
-	.section_fonctionnement_btn {
-		flex-grow: 1;
+@media screen and (min-width: 800px) {
+	.section_fonctionnement {
+		background-color: var(--background);
+		.section_btn {
+			display: flex;
+			justify-content: space-between;
+			.section_fonctionnement_btn {
+				flex-grow: 1;
+				background-color: rgb(247, 228, 247);
+			}
+		}
 	}
 }
 
 .section_restaurants {
-/*	background-color: rgb(161, 233, 18);*/
+	/*	background-color: rgb(161, 233, 18);*/
 	background-color: var(--background);
-	margin: 1rem auto;
+	margin: 0 auto;
 	max-width: 1500px;
 	padding: 1rem;
-	font-family: 'Roboto';
-	
-	.carte_description_1{
-		font-family: 'Roboto';
-		color:black;
+	font-family: "Roboto";
+
+	.carte_description_1 {
+		font-family: "Roboto";
+		color: black;
 		padding-bottom: 1rem;
-		h4{
+		h4 {
 			font-weight: bold;
 			font-size: 1.2rem;
 		}
 	}
-
 	h2 {
+		font-family: "Roboto";
+		font-weight: 550;
+		font-size: 1.5rem;
 		padding: 1rem;
 	}
 
@@ -165,7 +178,7 @@ font-family: 'Roboto';
 	.section_restaurants_carte {
 		background-color: white;
 		width: 19rem;
-		height: 16rem;
+		height: 17rem;
 		border-radius: 1.5rem;
 		margin: 1rem;
 		flex-grow: 1;
@@ -177,23 +190,22 @@ font-family: 'Roboto';
 			object-fit: cover;
 			border-radius: 1.5rem 1.5rem 0 0;
 		}
-		
-	.nouveau {
-	background-color: var(--tertiaire);
-	color: rgb(26, 169, 78);
-	font-size: 1rem;
-	font-weight:500;
-	font-family: 'Roboto';
-	width: 4.5rem;
-	padding: 0.3rem;
-	text-align: center;
-	position: absolute;
-	align-self: flex-end;
-	z-index: 100;
-	bottom: 80%;
-	left: 75%;
-}
 
+		.nouveau {
+			background-color: var(--tertiaire);
+			color: rgb(26, 169, 78);
+			font-size: 1rem;
+			font-weight: 500;
+			font-family: "Roboto";
+			width: 4.5rem;
+			padding: 0.3rem;
+			text-align: center;
+			position: absolute;
+			align-self: flex-end;
+			z-index: 100;
+			bottom: 83%;
+			left: 68%;
+		}
 	}
 }
 
@@ -203,12 +215,14 @@ font-family: 'Roboto';
 	padding: 1rem;
 }
 
-
+.fa-heart {
+	font-size: 1.35rem;
+}
 
 .fa-heart-1 {
 	color: black;
 	z-index: -10;
-	margin-right: -1.2rem;
+	margin-right: -1.6rem;
 }
 .heartHover {
 	background-color: white;
@@ -231,9 +245,9 @@ font-family: 'Roboto';
 }
 
 footer {
-	background-color: rgb(19, 18, 18);
+	background-color: rgb(48, 48, 48);
 	.footer {
-		font-family: 'Roboto';
+		font-family: "Roboto";
 		margin: 0 auto;
 		max-width: 1500px;
 		padding: 2rem 1rem;
@@ -244,13 +258,13 @@ footer {
 		flex-wrap: wrap;
 	}
 	.fas {
-		padding: 1rem 1rem 1rem 0;
+		padding: 0.5rem 1rem 0.5rem 0;
 	}
 	.mentionsLegales {
-		padding: .5rem 1rem .5rem 0;
+		padding: 0.5rem 0.5rem 0.5rem 0;
 	}
 	.footer_header {
-		font-family: 'Shrikhand';
+		font-family: "Shrikhand";
 		font-weight: normal;
 		margin: 0 1rem 1rem 0;
 		font-size: 1.5rem;
@@ -259,7 +273,9 @@ footer {
 	.footerInfos {
 		flex-grow: 1;
 	}
-	a{color:white;}
+	a {
+		color: white;
+	}
 }
 @media screen and (max-width: 600px) {
 	.footerInfos {
@@ -298,38 +314,38 @@ footer {
 }
 
 .restaurant {
-	padding: 0 .031rem;
+	padding: 0 0.031rem;
 	.restaurantEntresPlats {
 		background-color: rgb(242, 242, 242);
 		margin-top: -4rem;
 		padding: 1rem;
 		border-radius: 2.5rem 2.5rem 0 0;
 		.nomDuRestaurant_titre {
-				display: flex;
-				justify-content: space-around;
-				align-items: center;
-				padding: 1rem;
-				max-width: 900px;
-				margin: 0 auto;
-			h2{
-					font-family: 'Shrikhand' ;
-					font-size: 1.5rem;
-					font-weight:normal;
-				}
+			display: flex;
+			justify-content: space-around;
+			align-items: center;
+			padding: 1rem;
+			max-width: 900px;
+			margin: 0 auto;
+			h2 {
+				font-family: "Shrikhand";
+				font-size: 1.5rem;
+				font-weight: normal;
+			}
 		}
 	}
 }
 .menu {
 	margin: 0 auto;
 	max-width: 1500px;
-			h4{
-font-family: 'Roboto';
-font-weight: 700;
-}
-P{
-	font-family: 'Roboto';
-font-weight: 400;
-}
+	h4 {
+		font-family: "Roboto";
+		font-weight: 700;
+	}
+	P {
+		font-family: "Roboto";
+		font-weight: 400;
+	}
 
 	.trait {
 		width: 3rem;
@@ -363,9 +379,7 @@ font-weight: 400;
 	}
 }
 
-
 @media screen and (min-width: 650px) {
-
 	.menu {
 		max-width: 1500px;
 		margin: 0 auto;
@@ -381,7 +395,6 @@ font-weight: 400;
 		.carteMenuDesserts {
 			margin-left: 1rem;
 		}
-
 	}
 
 	.commander {
@@ -393,5 +406,4 @@ font-weight: 400;
 			font-size: 1.4rem;
 		}
 	}
-
 }
