--- a/desing/default.css
+++ b/desing/default.css
@@ -10,7 +10,7 @@
   --tertiaire: #99e2d0;
   --blanc: #ffffff;
   --noir: #000000;
-  --background: rgb(250, 247, 247);
+  --background: #f6f6f6;
 }
 
 h3 {
@@ -52,8 +52,8 @@ main {
   padding: 1rem;
   background-color: #e6e6e6;
   text-align: center;
-  -webkit-box-shadow: 0px -2px 1px 1px rgba(148, 143, 143, 0.77);
-          box-shadow: 0px -2px 1px 1px rgba(148, 143, 143, 0.77);
+  -webkit-box-shadow: 0px 0px 2px 3px rgba(148, 143, 143, 0.2);
+          box-shadow: 0px 0px 2px 3px rgba(148, 143, 143, 0.2);
 }
 
 .section_location h4 {
