--- a/desing/default.scss
+++ b/desing/default.scss
@@ -10,7 +10,7 @@
 	--tertiaire: #99e2d0;
 	--blanc: #ffffff;
 	--noir: #000000;
-	--background: rgb(250, 247, 247);
+	--background: #f6f6f6;
 }
 h3 {
 	font-family: "Roboto";
@@ -46,7 +46,7 @@ main {
 	padding: 1rem;
 	background-color: rgb(230, 230, 230);
 	text-align: center;
-	box-shadow: 0px -2px 1px 1px rgba(148, 143, 143, 0.77);
+	box-shadow: 0px 0px 2px 3px rgba(148, 143, 143, 0.2);
 	h4 {
 		font-size: 1.5rem;
 	}
