--- a/desing/default.scss
+++ b/desing/default.scss
@@ -147,7 +147,7 @@ main {
 }
 
 .section_restaurants {
-	/*	background-color: rgb(161, 233, 18);*/
+	background-color: rgb(161, 233, 18);
 	background-color: var(--background);
 	margin: 0 auto;
 	max-width: 1500px;
@@ -228,11 +228,13 @@ main {
 .heartHover {
 	background-color: white;
 	opacity: 0;
+	  transition: all 0.4s;
 }
 
 .heartHover:hover {
 	color: var(--primaire);
 	opacity: 1;
+	transform: scale(1.15);
 }
 @media screen and (min-width: 1050px) {
 	.carte_4 {
@@ -286,6 +288,7 @@ footer {
 
 /*la palette du gout*/
 .header_paletteDuGout {
+		background-color: rgb(242, 242, 242);
 	display: flex;
 	align-items: center;
 	margin: 0 auto;
@@ -303,7 +306,6 @@ footer {
 		color: black;
 	}
 }
-
 .restaurant {
 	padding: 0 0.031rem;
 	.paletteDuGout_img {
@@ -314,35 +316,6 @@ footer {
 		position: relative;
 		z-index: -4;
 		margin: 0 auto;
-	}
-	.menu {
-		margin: 0 auto;
-		max-width: 1500px;
-		h4 {
-			font-family: "Roboto";
-			font-weight: 700;
-		}
-		P {
-			font-family: "Roboto";
-			font-weight: 400;
-		}
-
-		.trait {
-			width: 3rem;
-			border: 2px solid var(--tertiaire);
-		}
-		.menuDescription {
-			background-color: white;
-			padding: 1rem;
-			margin: 1rem 0;
-			border-radius: 1rem;
-
-			.menuDescriptionPrix {
-				display: flex;
-				justify-content: space-between;
-				padding: 0.3rem 0 0 0;
-			}
-		}
 	}
 	.restaurantEntresPlats {
 		background-color: rgb(242, 242, 242);
@@ -362,15 +335,90 @@ footer {
 				font-weight: normal;
 			}
 		}
+		.menu {
+			margin: auto;
+			.trait {
+				width: 3rem;
+				border: 2px solid var(--tertiaire);
+			}
+			.menuEntree {
+					li p {
+						text-overflow: ellipsis;
+						overflow: hidden;
+						white-space: nowrap;
+						width: calc(65%);
+					}
+				
+				li {
+					background-color: white;
+					position: relative;
+					border-radius: 1rem;
+					margin: 1rem 0;
+					font-size: 1rem;
+					font-family: "Roboto", serif;
+					transition-duration: 0.3s;
+					cursor: pointer;
+					box-shadow: 0 0 0.3rem 0.05rem #dadada;
+					width: 100%;
+					overflow: hidden;
+				
+					.menuTitre {
+						padding: 1rem 1rem 0 1rem;
+						font-weight: bold;
+					}
+					.menuSousTitre {
+						padding: 0 1rem 1rem 1rem;
+					}
+					.menuConfirmation {
+						position: absolute;
+						top: 0px;
+						right: -4.5rem;
+						width: 100%;
+						height: 100%;
+						border-radius: 10px;
+						border-right: 4.5rem solid #8fdeca;
+						transition-duration: 0.25s;
+						.menuPrix {
+							position: absolute;
+							right: 1.3rem;
+							bottom: 1rem;
+							font-weight: bold;
+							font-size: 1.3rem;
+						}
+					}
+					.menuConfirmation::after {
+						content: "";
+						position: absolute;
+						right: -45px;
+						top: 20px;
+						width: 30px;
+						height: 30px;
+						background: url(/img/logo/confirm_logo.png);
+						background-size: 100%;
+						transform: rotate(360deg);
+						transition-duration: 0.35s;
+					}
+					.menuConfirmation:hover::after {
+						transform: rotate(0deg);
+					}
+					.menuConfirmation:hover {
+						right: 0px;
+					}
+				}
+			}
+		}
 	}
 }
 
 .commander {
 	max-width: 1500px;
 	margin: 1rem auto;
-	max-width: 1500px;
 	/*	background-color: blueviolet;*/
 	text-align: center;
+		.btn_commander:hover {
+			  transition-duration: 1s;
+			transform: scale(1.1);
+	}
 	.btn_commander {
 		padding: 0.5rem 1.5rem;
 		border: 1px solid;
@@ -378,27 +426,41 @@ footer {
 		color: white;
 		background-color: var(--secondaire);
 		cursor: pointer;
-	}
+			}
 }
 
-@media screen and (min-width: 650px) {
+@media screen and (min-width: 750px) {
+	.header_paletteDuGout {
+max-width: 900px;
+			margin: auto;
+}
+.restaurant {
+	max-width: 900px;
+	margin: 0 auto;
+		}
+	
 	.menu {
-		max-width: 1500px;
-		margin: 0 auto;
-		display: flex;
-		flex-wrap: wrap;
-		.carteMenuEntree {
-			width: 100%;
-		}
-
-		article {
-			flex-grow: 1;
-		}
-		.carteMenuDesserts {
-			margin-left: 1rem;
+			max-width: 900px;
+			margin: 0 30%;
+		display: flex;	
+		flex-direction: column;
+		justify-content: center;
+		.carteHeader{
+			flex-basis: 100%;
+			margin-top: 2rem;
 		}
 	}
-
+	.nomDuRestaurant_titre {
+		background-color: var(--secondaire);
+		border-radius: 1.5rem;
+		margin: 2rem auto;
+		.heartHover {
+			background-color: var(--secondaire);
+		}}
+		.nomDuRestaurant_titre:hover {
+			  transition-duration: 1s;
+			transform: scale(1.01);
+	}
 	.commander {
 		text-align: center;
 		margin: 1rem 0;
@@ -409,25 +471,4 @@ footer {
 		}
 	}
 }
-@media screen and (min-width: 1200px) {
-	.nomDuRestaurant_titre {
-		background-color: var(--secondaire);
-		border-radius: 1.5rem;
-		margin: auto;
-		.heartHover {
-			background-color: var(--secondaire);
-		}
-	}
-	.menu {
-		/*	background-color: chartreuse;*/
-		margin: 0rem auto;
-		padding-top: 1.5rem;
-		flex-wrap: nowrap;
-		.carteMenu {
-			flex-basis: 30%;
-		}
-		.carteMenuEntree {
-			margin-right: 1rem;
-		}
-	}
-}
+
