--- a/desing/default.css
+++ b/desing/default.css
@@ -13,6 +13,98 @@
   --background: #f6f6f6;
 }
 
+#chargement {
+  background-color: #9356dc;
+  position: fixed;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffffb8;
+  z-index: 10;
+  animation: finChargement 4s both;
+  -moz-animation: finChargement 4s both;
+  -webkit-animation: finChargement 4s both;
+  -o-animation: finChargement 4s both;
+}
+
+@keyframes finChargement {
+  80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    display: none;
+    pointer-events: none;
+  }
+}
+
+@-webkit-keyframes finChargement {
+  80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    display: none;
+    pointer-events: none;
+  }
+}
+
+#chargement #chargementSpinner {
+  position: relative;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: 10px solid var(--primaire);
+  border-top: 10px solid var(--secondaire);
+  border-bottom: 10px solid var(--tertiaire);
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  opacity: 0.7;
+  -webkit-animation: spin 4s linear infinite;
+  animation: spin 4s linear infinite;
+  -webkit-animation-delay: .2s;
+          animation-delay: .2s;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
 h3 {
   font-family: "Roboto";
   font-weight: 100;
@@ -94,6 +186,11 @@ main {
   border: none;
   background-color: var(--secondaire);
   color: white;
+  -webkit-transition-duration: 0.25s;
+          transition-duration: 0.25s;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  cursor: pointer;
 }
 
 .section_fonctionnement {
@@ -122,6 +219,7 @@ main {
   margin: 1rem;
   padding: 1.5rem;
   border-radius: 1.5rem;
+  cursor: pointer;
 }
 
 .section_btn .btn_action_3 {
@@ -148,6 +246,13 @@ main {
 .section_btn .section_fonctionnement_btn_action {
   font-size: 1rem;
   font-weight: bold;
+}
+
+.section_fonctionnement_btn:hover {
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+  -webkit-transform: scale(1s);
+          transform: scale(1s);
 }
 
 @media screen and (min-width: 800px) {
@@ -245,6 +350,13 @@ main {
   left: 68%;
 }
 
+.section_restaurants .section_restaurants_carte:hover {
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
+}
+
 .section_restaurants_carte_description {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -338,9 +450,12 @@ footer .footerInfos {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+  -webkit-transition-duration: 0.25s;
+          transition-duration: 0.25s;
+  cursor: pointer;
 }
 
-footer a {
+a {
   color: white;
 }
 
@@ -351,7 +466,7 @@ footer a {
   }
 }
 
-/*la palette du gout*/
+/*pages html*/
 .header_paletteDuGout {
   background-color: #f2f2f2;
   display: -webkit-box;
