--- a/desing/default.css
+++ b/desing/default.css
@@ -620,6 +620,49 @@ a {
   right: 0px;
 }
 
+/*Animation apparitionMenu*/
+.menu {
+  animation: apparitionMenu 1s both;
+  -moz-animation: apparitionMenu 1s both;
+  -webkit-animation: apparitionMenu 1s both;
+  -o-animation: apparitionMenu 1s both;
+  opacity: 0;
+}
+
+.menu-1 {
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+}
+
+.menu-2 {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+
+.menu-3 {
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+}
+
+@-webkit-keyframes apparitionMenu {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes apparitionMenu {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/*fin animation apparitionMenu*/
 .commander {
   max-width: 1500px;
   margin: 1rem auto;
